# point-cloud-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindGLFW3.cmake
glad/: CMakeLists.txt  glad.c
glad/glad/: glad.h
includes/: app_manager.h  axial_projections.h  background.h  camera.h  camera_controller.h  demo_data.h  file_reader.h  input.h  kdtree.h  linalg.h  point.h  point_cloud.h  point_cloud_io.h  point_cloud_primitives.h  point_cloud_scene.h  renderer.h  resources.h  scene.h  scene_engine.h  search_queue.h  shader_program.h  shaderc.h  view_controller.h
includes/demo_scenes/: camera_test.h  cube_test.h  demo_collection.h  input_test.h  ortho_voxel_cloud_test.h
includes/shaders/: ftb_splat_shader.h  layered_splat_shader.h  point_normal_shade_shader.h  point_shader.h  point_sphere_shade_shader.h  splat_shader.h
includes/tests/: kdtree_test.h  queue_test.h  test.h
pointclouds/: airplane_1.ply  car_1.ply
resources/: lamppost.pcd  point.frag  point.vert  point1.vert  point_normal_shade.vert  point_sphere_shade.frag  point_sphere_shade.vert  sphere.frag  sphere.vert  splat_blend.frag  splat_layer.frag  splat_layer.vert  texture_blend.frag  voxel_ortho.frag
resources/dev/: voxel_persp.vert
shaders/: point.frag  point.vert  splat_blend2.frag  splat_layer.frag  splat_stencil.frag  vertex_shader1.glsl
src/: app.cpp  app_main.cpp  app_manager.cpp  axial_projections.cpp  background.cpp  camera.cpp  camera_controller.cpp  file_reader.cpp  input.cpp  kdtree.cpp  linalg.cpp  point_cloud.cpp  point_cloud_io.cpp  point_cloud_primitives.cpp  point_cloud_scene.cpp  resources.cpp  scene.cpp  scene_engine.cpp  shader_program.cpp  shaderc.cpp  view_controller.cpp
src/demo_scenes/: camera_test.cpp  cube_test.cpp  input_test.cpp  ortho_voxel_cloud_test.cpp
src/shaders/: ftb_splat_shader.cpp  layered_splat_shader.cpp  point_normal_shade_shader.cpp  point_shader.cpp  point_sphere_shade_shader.cpp  splat_shader.cpp
src/tests/: kdtree_test.cpp  queue_test.cpp  test.cpp
